# uni-c-exercises

./: .gitignore  README.md
exercises/: CMakeLists.txt  config.h  main.c
exercises-01-06/: CMakeLists.txt  config.h  main.c
exercises-01-06/17/: 17.h
exercises-01-06/exerciseCuatro/: exerciseCuatro.c
exercises-01-06/exerciseTres/: exerciseTres.c  exerciseTres.h
exercises-01-06/exerciseUno/: exerciseUno.c  exerciseUno.h
exercises/17/: 17.c
exercises/18/: 18.c  18.h
exercises/exerciseCuatro/: exerciseCuatro.c  exerciseCuatro.h
exercises/exerciseDuo/: exerciseDuo.c  exerciseDuo.h
exercises/exerciseTres/: exerciseTres.c
exercises/exerciseUno/: test.h
